@@ -22,3 +22,12 @@ or some similar function!?
     solve linear algebra operations. Yet, there are many
     issues with openBLAS and multiprocessing. To resolve this set the
     environment variable `OPENBLAS_NUM_THREADS=1`.
+
+
+**Q:**  GitPython does not work. If I specify my repository ``git_repository='./myrepo'``,
+pypet crashes with an `AttributeError: 'Repo' object has no attribute 'index'`.
+What should I do?
+
+    **A:** You probably have an older version of GitPython (likely 0.1.7), install a newer one.
+    If ``pip install GitPython`` still downloads the old version, try ``pip install --pre GitPython``
+    or if you simply want to upgrade use ``pip install --upgrade --pre GitPython``.
